// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test med saker 1`] = `
<div
  className="dittnav-lenkepanel-top-container"
>
  <div
    className="panel oversiktspanel dittnav-lenkepanel-stor"
  >
    <div
      className="oversiktspanel__header"
    >
      <div
        className="oversiktspanel__overskrift"
      >
        <h2
          className="typo-systemtittel"
        >
          <span>
            Dine siste saker
          </span>
        </h2>
      </div>
    </div>
    <div
      className="oversiktspanel__liste"
    >
      <div
        className="sak-container"
      >
        <a
          className="lenke sak-lenke"
          href="http://localhost:9222/saksoversikt/tema/BAR"
          id="sak-lenke-id"
          onClick={[Function]}
        >
          <div
            className="sak-temanavn lenke"
          >
            <h2
              className="typo-undertittel"
            >
              Barnetrygd
            </h2>
          </div>
          <div
            className="sak-status"
          >
            <p
              className="typo-undertekst"
            >
              <span>
                Sist oppdatert: 
              </span>
              <span>
                15. aug. 2019
              </span>
            </p>
          </div>
        </a>
      </div>
      <div
        className="sak-container"
      >
        <a
          className="lenke sak-lenke"
          href="http://localhost:9222/saksoversikt/tema/SYK"
          id="sak-lenke-id"
          onClick={[Function]}
        >
          <div
            className="sak-temanavn lenke"
          >
            <h2
              className="typo-undertittel"
            >
              Sykepenger og oppfølging
            </h2>
          </div>
          <div
            className="sak-status"
          >
            <p
              className="typo-undertekst"
            >
              <span>
                Du har ti søknader under behandling. 
              </span>
              <span>
                Sist oppdatert: 
              </span>
              <span>
                14. aug. 2019
              </span>
            </p>
          </div>
        </a>
      </div>
    </div>
    <a
      className="lenke"
      href="http://localhost:9222/saksoversikt"
      id="oversiktspanel__header-lenke-id"
    >
      <p
        className="typo-element oversiktspanel__header-lenke"
      >
        <span>
          Se alle dine saker (6)
        </span>
        <i
          className="nav-frontend-chevron chevronboks oversiktspanel__chevron chevron--hoyre"
        />
      </p>
    </a>
  </div>
  <div
    className="dittnav-lenkepanel-liten"
    id="cols-layout"
  >
    <a
      alt="Utbetalinger"
      className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
      href="http://localhost:9222/utbetalingsoversikt"
      onClick={[Function]}
    >
      <span
        className="typo-undertittel lenkepanel__heading"
      >
        <span>
          Dine utbetalinger
        </span>
      </span>
      <span
        className="lenkepanel__indikator"
      />
    </a>
    <a
      alt="Innboks"
      className="lenkepanel dittnav-lenkepanel-liten-item last lenkepanel--border"
      href="http://localhost:9222/mininnboks"
      onClick={[Function]}
    >
      <span
        className="typo-undertittel lenkepanel__heading"
      >
        <span>
          Innboks
        </span>
      </span>
      <span
        className="lenkepanel__indikator"
      />
    </a>
  </div>
</div>
`;

exports[`Snapshot test uten saker 1`] = `
<div
  className="dittnav-lenkepanel-top-container"
>
  <div
    className="dittnav-lenkepanel-liten"
    id={null}
  >
    <a
      alt="Dine saker"
      className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
      href="http://localhost:9222/saksoversikt"
      onClick={[Function]}
    >
      <span
        className="typo-undertittel lenkepanel__heading"
      >
        <span>
          Dine saker
        </span>
      </span>
      <span
        className="lenkepanel__indikator"
      />
    </a>
    <a
      alt="Utbetalinger"
      className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
      href="http://localhost:9222/utbetalingsoversikt"
      onClick={[Function]}
    >
      <span
        className="typo-undertittel lenkepanel__heading"
      >
        <span>
          Dine utbetalinger
        </span>
      </span>
      <span
        className="lenkepanel__indikator"
      />
    </a>
    <a
      alt="Innboks"
      className="lenkepanel dittnav-lenkepanel-liten-item last lenkepanel--border"
      href="http://localhost:9222/mininnboks"
      onClick={[Function]}
    >
      <span
        className="typo-undertittel lenkepanel__heading"
      >
        <span>
          Innboks
        </span>
      </span>
      <span
        className="lenkepanel__indikator"
      />
    </a>
  </div>
</div>
`;
